--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -75,20 +75,37 @@ body, html {
 
 a:hover {
     color: #45a29e;
-
 }
 
-/*not work*/
+.react-datepicker__day--selected, .react-datepicker__day--keyboard-selected {
+    background-color: #45a29e !important;
+}
+
+.react-datepicker__current-month, .react-datepicker-time__header, .react-datepicker__day-name, .react-datepicker__day, .react-datepicker__time-name {
+    color: #324051 !important;
+}
+
+.selected_date_mp {
+    color: #324051 !important;
+}
+
+.selected_cell {
+    background-color: #45a29e !important;
+    color: #324051 !important;
+}
+
 .ReactTable .rt-table {
-    /*width: 95%;*/
+    width: 95%;
+    margin-top: 20px;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    border: 5px red;
+    background: #324051;
+    border: 2px solid #777777;
 }
+
 .ReactTable .rt-thead {
-    width: 95%;
     -webkit-box-flex: 1;
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
@@ -107,7 +124,6 @@ a:hover {
 }
 
 .ReactTable .rt-tr-group {
-    width: 95%;
     -webkit-box-flex: 1;
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
