--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -222,3 +222,8 @@ button {
     margin-top: 10px;
     display: inline-block;
 }
+
+button:disabled {
+    background: #777777;
+    border-color: #777777;
+}
